--- a/W04/task2.html
+++ b/W04/task2.html
@@ -3,7 +3,7 @@
 	<title>W04: task2</title>
     </head>
     <body>
-	<script src="http://mrdoob.github.io/three.js/build/three.min.js"></script>
+	<script src="https://threejs.org/build/three.min.js"></script>
 	<script src="main2.js"></script>
 	<script>
 	 main();
